--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 	<properties>
 		<java.version>21</java.version>
 		<jjwt.version>0.11.2</jjwt.version>
+		<jacoco.version>0.8.12</jacoco.version>
+		<pitest.version>1.14.2</pitest.version>
+		<pitest-junit5-plugin.version>1.2.0</pitest-junit5-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -80,6 +83,46 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<version>${pitest.version}</version>
+				<configuration>
+					<targetClasses>
+						<param>com.matheusrangel.jwtcodechallenge.*</param>
+					</targetClasses>
+					<targetTests>
+						<param>com.matheusrangel.jwtcodechallenge.*</param>
+					</targetTests>
+				</configuration>
+				<dependencies>
+					<!-- Need this to support JUnit 5 for the PIT test plugin-->
+					<dependency>
+						<groupId>org.pitest</groupId>
+						<artifactId>pitest-junit5-plugin</artifactId>
+						<version>${pitest-junit5-plugin.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
